unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/BP_Legacy_SFDC_Id__c.field-meta.xml
<CustomField>
    <fullName>BP_Legacy_SFDC_Id__c</fullName>
    <externalId>true</externalId>
    <label>BP Legacy SFDC Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>