unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/Contracted_Price_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Price_Discount_Percentage__c</fullName>
    <formula>IF( ISBLANK( SBQQ__Price__c), SBQQ__Discount__c  ,(Product_List_Price__c - SBQQ__Price__c )/Product_List_Price__c)</formula>
    <label>Contracted Price Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>