unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/Contracted_Price_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Price_Reference__c</fullName>
    <label>Contracted Price Reference</label>
    <length>250</length>
    <type>Text</type>
</CustomField>