unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy</label>
    <type>Checkbox</type>
</CustomField>