unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/MSA_Contract__c.field-meta.xml
<CustomField>
    <fullName>MSA_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Contract</label>
    <referenceTo>MSA_Contract__c</referenceTo>
    <relationshipLabel>Contracted Prices</relationshipLabel>
    <relationshipName>Contracted_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>