unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/Product_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_List_Price__c</fullName>
    <description>List Price of related Product</description>
    <label>Product List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>