unpackaged/main/default/objects/SBQQ__ContractedPrice__c/fields/Same_As_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Same_As_List_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This flag is to track if the Contract Price has been changed from the List Price</description>
    <inlineHelpText>This flag is to track if the Contract Price has been changed from the List Price</inlineHelpText>
    <label>Same As List Price</label>
    <type>Checkbox</type>
</CustomField>